# router/bookmark.ts
@@ -1,0 +1,23 @@
+import express from "express";
+import bookmarkController from "@controller/bookmarkController";
+import { validateToken } from "@middleware/jwt";
+import { validate } from "@middleware/validate";
+import { getBookmarkSchema, toggleBookmarkSchema } from "@common/vaidation";
+
+const bookmarkRouter = express.Router();
+
+bookmarkRouter.get(
+  "/",
+  validateToken,
+  validate(getBookmarkSchema, ["query"]),
+  bookmarkController.getBookmarkByCurUser
+);
+
+bookmarkRouter.patch(
+  "/",
+  validateToken,
+  validate(toggleBookmarkSchema, ["body"]),
+  bookmarkController.toggleBookMark
+);
+
+export default bookmarkRouter;
